tests/paczka1/fuzzy1/41460873.err
Error in line 3: sPsd S455 63,3
Error in line 10: JgGN3QsNNXc S310 11,9
Error in line 14: JgGN3QsNNXc S944 67,0
Error in line 15: JgGN3QsNNXc S310 73,8
Error in line 23: JgGN3QsNNXc S944 6,87
Error in line 29: GRVyVJIhmbK S375 24,3
Error in line 24: 7BjT3wO S375 48,5
